--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_GAME_SERVER_URL=http://localhost:8000
-NEXT_PUBLIC_GAME_SERVER_URL_PROD=https://your-game-server-domain.com
+NEXT_PUBLIC_GAME_SERVER_URL_PROD=https://emergent-game.vercel.app
