--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
         "tailwindcss-animate": "^1.0.7",
         "uuid": "^9.0.1",
         "vaul": "^1.1.2",
-        "zod": "^3.25.67"
+        "zod": "^3.25.67",
+        "autoprefixer": "^10.4.23"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.23",
         "globals": "^16.2.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.1"
