fix: consolidate API routes to use KV instead of MongoDB
- Replace MongoDB with Vercel KV in catch-all route
- Update status endpoints to use KV storage with TTL
- Add comprehensive API documentation in root endpoint
- Update .env.example to reflect KV configuration
- Ensure consistency across all API routes using KV
- Add proper error handling for KV operations

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# Local Development
-# For local development, Vercel KV will use mock/fallback storage
-# When deployed to Vercel, these will be automatically populated
-
-# Vercel KV (Redis) - Automatically set by Vercel
+# Vercel KV (Redis) - Automatically set by Vercel when deployed
+# For local development, you can use Redis locally or leave empty for fallback
 KV_REST_API_URL="your_kv_rest_api_url"
 KV_REST_API_TOKEN="your_kv_rest_api_token"
 KV_REST_API_READ_ONLY_TOKEN="your_kv_read_only_token"
 
 # Application URLs
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_GAME_SERVER_URL="http://localhost:3000"
 
 # Optional: For CORS if needed
 CORS_ORIGINS="*"
