--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@ KV_REST_API_READ_ONLY_TOKEN="your_kv_read_only_token"
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_GAME_SERVER_URL="http://localhost:3000"
 
-# Optional: For CORS if needed
+# Optional: For CORS if needed!
 CORS_ORIGINS="*"
