--- a/.env
+++ b/.env
@@ -1,4 +1,21 @@
-MONGO_URL=mongodb://localhost:27017
-DB_NAME=your_database_name
-NEXT_PUBLIC_BASE_URL=https://medieval-tactics-5.preview.emergentagent.com
-CORS_ORIGINS=*
+
+
+# Local Development
+# For local development, Vercel KV will use fallback storage
+# When deployed to Vercel, these will be automatically populated
+
+# Vercel KV (Redis) - Automatically set by Vercel when deployed
+# Do NOT hardcode these values - Vercel will provide them
+# KV_REST_API_URL=
+# KV_REST_API_TOKEN=
+# KV_REST_API_READ_ONLY_TOKEN=
+# KV_URL=
+# REDIS_URL=
+
+# Application URLs
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_GAME_SERVER_URL=https://emergent-game.vercel.app
+NEXT_PUBLIC_GAME_SERVER_URL_PROD=https://emergent-game.vercel.app
+
+# Optional: For CORS if needed
+CORS_ORIGINS="*"
