--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev:no-reload": "next dev --hostname 0.0.0.0 --port 3000",
         "dev:webpack": "next dev --hostname 0.0.0.0 --port 3000",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "test": "node --test --experimental-specifier-resolution=node",
+        "test:watch": "node --test --watch --experimental-specifier-resolution=node"
     },
     "dependencies": {
         "@boardgame.io/redis-pubsub": "^0.0.1",
